--- a/contact.html
+++ b/contact.html
@@ -5,43 +5,62 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contáctenos</title>
     <link rel="stylesheet" href="style_contact.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.13.1/font/bootstrap-icons.min.css"> 
+    
 </head>
 <body>
     <header>
-        <nav id="menu">
+    <nav class="navbar navbar-expand-lg bg-body-tertiary">
+        <div class="container-fluid">
             <img id="logo" src="images/logo.jpg" alt="Logo" />
-            <ul id="opciones_menu">
-                <li><a class="opcion" href="index.html">Home</a></li>
-                <li><a class="opcion" href="about.html">Sobre nosotros</a></li>
-                <li><a class="opcion" href="contact.html">Contáctenos</a></li>
-            </ul>
-        </nav>
-    </header>
+            <a class="text-warning navbar-brand" id="titulo_pagina" href="#">Autocar</a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+            <div class="navbar-nav">
+                <a class="nav-link active" aria-current="page" href="index.html">Inicio</a>
+                <a class="nav-link" href="about.html"> Sobre nosotros</a>
+                <a class="nav-link" href="contact.html">Contáctenos</a>
+            </div>
+            </div>
+        </div>
+    </nav>
 
     <div class="contenido">
-        <h1>Contáctenos</h1>
+        <h1 class="text-warning">Contáctenos</h1>
         <p>¡Nos encantaría saber de usted! Puede comunicarse con nosotros a través de los siguientes medios:</p>
-
-        <div class="seccion-contacto">
-            <h2>Correo Electrónico</h2>
-            <p>Correo general: contacto@autocar.com</p>
-            <p>Soporte técnico: soporte@autocar.com</p>
+    <!-- Card 1: Correo -->
+        <div class="card" style="width: 18rem;">
+            <div class="card-body">
+                <h5 class="card-title text-warning">Correo Electrónico</h5>
+                <p class="card-text">Correo general: contacto@autocar.com</p>
+                <p class="card-text">Soporte técnico: soporte@autocar.com</p>
+            </div>
         </div>
 
-        <div class="seccion-contacto">
-            <h2>Teléfono</h2>
-            <p>Oficina principal: +57 (1) 1234567</p>
-            <p>Horario de atención: Lunes a Viernes, 9:00 AM - 5:00 PM</p>
+    <!-- Card 2: Teléfono -->
+        <div class="card" style="width: 18rem;">
+            <div class="card-body">
+                <h5 class="card-title text-warning">Teléfono</h5>
+                <p class="card-text">Oficina principal: +57 (1) 1234567</p>
+                <p class="card-text">Horario de atención: Lunes a Viernes, 9:00 AM - 5:00 PM</p>
+            </div>
         </div>
 
-        <div class="seccion-contacto">
-            <h2>Dirección</h2>
-            <p>Calle 93 B #13-45</p>
-            <p>Bogotá, Colombia</p>
-        </div>
+    <!-- Card 3: Dirección -->
+        <div class="card" style="width: 18rem;">
+            <div class="card-body">
+                <h5 class="card-title text-warning">Dirección</h5>
+                <p class="card-text">Calle 93 B #13-45</p>
+                <p class="card-text">Bogotá, Colombia</p>
+            </div>
+         </div>
 
+    <!-- Formulario -->
         <div class="formulario">
-            <h2>Envíanos un mensaje</h2>
+            <h2 class="text-warning">Envíanos un mensaje</h2>
             <label>Nombre:</label>
             <input type="text" placeholder="Tu nombre">
 
@@ -51,12 +70,12 @@
             <label>Mensaje:</label>
             <textarea placeholder="Escribe tu mensaje aquí..."></textarea>
 
-            <button>Enviar</button>
+            <button type="button" class="btn btn-warning">Enviar</button>
         </div>
     </div>
 
     <footer id="pie_pagina">
-        <div class="footer-content">
+        <div>
             <h3 id="titulo_footer">Desarrolladores</h3>
             <ul id="desarrolladores">
                 <li class="desarrollador">Santiago Escobar - satiago@email.com</li>
@@ -65,6 +84,15 @@
                 <li class="desarrollador">Ricardo Sandoval - ricardo@email.com</li>
             </ul>
         </div>
+        
+        <div class="container mt-5 d-flex flex-column justify-content-center col-lg-2" id="logos_enlace">
+            <div>
+                <a class="iconos" href="https://github.com/Boxwel/LAB-Blog-v2" target="_blank" rel="noopener noreferrer">
+                    <i class="bi bi-github"></i>
+                </a>         
+        </div>
     </footer>
-</body>
+
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js"></script>
+
 </html>
