--- a/index.html
+++ b/index.html
@@ -6,25 +6,25 @@
     <title>Página principal</title>
     <link rel="stylesheet" href="style_index.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.13.1/font/bootstrap-icons.min.css">
-</head>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.13.1/font/bootstrap-icons.min.css">  
 
+</head>
+   
 
 <body>
     <header>
     <nav class="navbar navbar-expand-lg bg-body-tertiary">
         <div class="container-fluid">
             <img id="logo" src="images/logo.jpg" alt="Logo" />
-            <a class="navbar-brand" id="titulo_pagina" href="#">Autocar</a>
+            <a class="text-warning navbar-brand" href="#">Autocar</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
             <div class="navbar-nav">
-                <a class="nav-link active" aria-current="page" href="#index.htm">Inicio</a>
-                <a class="nav-link" href="#about.html"> Sobre nosotros</a>
-                <a class="nav-link" href="#contact.html">Contáctenos</a>
+                <a class="nav-link active" aria-current="page" href="index.html">Inicio</a>
+                <a class="nav-link" href="about.html"> Sobre nosotros</a>
+                <a class="nav-link" href="contact.html">Contáctenos</a>
             </div>
             </div>
         </div>
@@ -119,6 +119,8 @@
 
         </div> -->
     </div>
+
+
     <footer id="pie_pagina">
         <div>
             <h3 id="titulo_footer">Desarrolladores</h3>
@@ -129,15 +131,16 @@
                 <li class="desarrollador">Ricardo Sandoval - ricardo@email.com</li>
             </ul>
         </div>
+
         <div class="container mt-5 d-flex flex-column justify-content-center col-lg-2" id="logos_enlace">
             <div>
-                <a class="iconos" href="https://github.com/rsandovalort-sd" target="_blank" rel="noopener noreferrer">
+                <a href="https://github.com/Boxwel/LAB-Blog-v2" target="_blank" rel="noopener noreferrer" class="iconos">
                     <i class="bi bi-github"></i>
                 </a>         
-        </div>  
+        </div>
     </footer>
 
-    <scriptsrc="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js"></script>
 
     
 </body>
