versión final index

--- a/index.html
+++ b/index.html
@@ -13,22 +13,22 @@
 
 <body>
     <header>
-    <nav class="navbar navbar-expand-lg bg-body-tertiary">
-        <div class="container-fluid">
-            <img id="logo" src="images/logo.jpg" alt="Logo" />
-            <a class="text-warning navbar-brand" href="#">Autocar</a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-            <div class="navbar-nav">
-                <a class="nav-link active" aria-current="page" href="index.html">Inicio</a>
-                <a class="nav-link" href="about.html"> Sobre nosotros</a>
-                <a class="nav-link" href="contact.html">Contáctenos</a>
+        <nav class="navbar navbar-expand-lg" id="menu">
+            <div class="container-fluid">
+                <img id="logo" src="images/logo.jpg" alt="Logo" />
+                <a class="text navbar-brand" id="titulo_pagina" href="#">Autocar</a>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+                <div class="navbar-nav">
+                    <a class="link nav-link active" aria-current="page" href="index.html">Inicio</a>
+                    <a class=" link nav-link" href="about.html"> Sobre nosotros</a>
+                    <a class="link nav-link" href="contact.html">Contáctenos</a>
+                </div>
+                </div>
             </div>
-            </div>
-        </div>
-    </nav>
+        </nav>
         <!-- <nav id="menu">
             <img id="logo" src="images/logo.jpg" alt="Logo" />
             <ul id="opciones_menu">
@@ -39,7 +39,6 @@
         </nav> -->
      </header>
 
-    
     
     <div id = "contenedor_principal">
         <div class="card col-md-3 mb-4" style="width: 18rem;">
@@ -58,11 +57,12 @@
         </div> -->
 
         <div class="card col-md-3 mb-4" style="width: 18rem;">
-            <img src="images/V2G.jpg" class="card-img-top" alt="ADAS">
+            <img src="images/V2G.jpg" class="card-img-top img-fluid" alt="ADAS">
             <div class="card-body">
                 <h5 class="card-title">Tecnología V2G</h5>
                 <p class="card-text">Tecnología V2G: La integración de la tecnología Vehicle-to-Grid permite que los vehículos no solo consuman energía de la red, sino que también la suministren a ella o a un hogar, contribuyendo a un futuro más sostenible.</p>
                 <a href="#" class="btn btn-warning boton">Ir al artículo</a>
+            </div>
         </div>
 
         <!-- <div class = "tarjetas">
@@ -118,6 +118,30 @@
             <p>Tesla Model Y: Se espera una nueva versión con mejoras en la autonomía y, posiblemente, asientos ventilados y calefactados, ideal para quienes buscan un crossover eléctrico versátil. </p>
 
         </div> -->
+        <div class="card col-md-3 mb-4" style="width: 18rem;">
+            <img src="images/Tesla-Model-Y.jpg" class="card-img-top" alt="Tesla-Model-Y">
+            <div class="card-body">
+                <h5 class="card-title">El nuevo modelo Tesla</h5>
+                <p class="card-text">Tesla Model Y: Se espera una nueva versión con mejoras en la autonomía y, posiblemente, asientos ventilados y calefactados, ideal para quienes buscan un crossover eléctrico versátil.</p>
+                <a href="#" class="btn btn-warning boton">Ir al artículo</a>
+            </div>
+        </div>
+        <div class="card col-md-3 mb-4" style="width: 18rem;">
+            <img src="images/Tesla-Model-Y.jpg" class="card-img-top" alt="Tesla-Model-Y">
+            <div class="card-body">
+                <h5 class="card-title">El nuevo modelo Tesla</h5>
+                <p class="card-text">Tesla Model Y: Se espera una nueva versión con mejoras en la autonomía y, posiblemente, asientos ventilados y calefactados, ideal para quienes buscan un crossover eléctrico versátil.</p>
+                <a href="#" class="btn btn-warning boton">Ir al artículo</a>
+            </div>
+        </div>
+        <div class="card col-md-3 mb-4" style="width: 18rem;">
+            <img src="images/Tesla-Model-Y.jpg" class="card-img-top" alt="Tesla-Model-Y">
+            <div class="card-body">
+                <h5 class="card-title">El nuevo modelo Tesla</h5>
+                <p class="card-text">Tesla Model Y: Se espera una nueva versión con mejoras en la autonomía y, posiblemente, asientos ventilados y calefactados, ideal para quienes buscan un crossover eléctrico versátil.</p>
+                <a href="#" class="btn btn-warning boton">Ir al artículo</a>
+            </div>
+        </div>
     </div>
 
 
@@ -132,7 +156,7 @@
             </ul>
         </div>
 
-        <div class="container mt-5 d-flex flex-column justify-content-center col-lg-2" id="logos_enlace">
+        <div class="container mt-3 d-flex flex-column justify-content-center col-lg-2" id="logos_enlace">
             <div>
                 <a href="https://github.com/Boxwel/LAB-Blog-v2" target="_blank" rel="noopener noreferrer" class="iconos">
                     <i class="bi bi-github"></i>
