--- a/contact.html
+++ b/contact.html
@@ -11,7 +11,7 @@
 </head>
 <body>
     <header>
-    <nav class="navbar navbar-expand-lg bg-body-tertiary">
+    <nav class="navbar navbar-expand-lg" id="menu">
         <div class="container-fluid">
             <img id="logo" src="images/logo.jpg" alt="Logo" />
             <a class="text-warning navbar-brand" id="titulo_pagina" href="#">Autocar</a>
@@ -20,9 +20,9 @@
             </button>
             <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
             <div class="navbar-nav">
-                <a class="nav-link active" aria-current="page" href="index.html">Inicio</a>
-                <a class="nav-link" href="about.html"> Sobre nosotros</a>
-                <a class="nav-link" href="contact.html">Contáctenos</a>
+                <a class="link nav-link active" aria-current="page" href="index.html">Inicio</a>
+                <a class="link nav-link" href="about.html"> Sobre nosotros</a>
+                <a class="link nav-link" href="contact.html">Contáctenos</a>
             </div>
             </div>
         </div>
@@ -83,13 +83,9 @@
                 <li class="desarrollador">Germán Gallego - german@email.com</li>
                 <li class="desarrollador">Ricardo Sandoval - ricardo@email.com</li>
             </ul>
-        </div>
-        
-        <div class="container mt-5 d-flex flex-column justify-content-center col-lg-2" id="logos_enlace">
-            <div>
-                <a class="iconos" href="https://github.com/Boxwel/LAB-Blog-v2" target="_blank" rel="noopener noreferrer">
-                    <i class="bi bi-github"></i>
-                </a>         
+            <a href="https://github.com/Boxwel/LAB-Blog-v2" target="_blank" rel="noopener noreferrer" class="iconos">
+                <i class="bi bi-github"></i>
+            </a>
         </div>
     </footer>
 
